added session support

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
-<form method=""POST" acrrion=""/login">
-    <label>Username</label>
+<form method="POST" action="/login">
+    <label for="username">Username</label>
     <input type="text" id="username" name="username">
 
     <label>Password</label>
